convert-po-files

--- a/apps/settings/l10n/zh_TW.json
+++ b/apps/settings/l10n/zh_TW.json
@@ -71,7 +71,7 @@
     "Nextcloud is not allowed to use the OPcache API. It is highly recommended to include all Nextcloud directories with <code>opcache.restrict_api</code> or unset this setting to disable OPcache API restrictions, to prevent errors during Nextcloud core or app upgrades." : "Nextcloud 不允許使用 OPcache API。強烈建議使用 <code>opcache.restrict_api</code> 涵蓋所有 Nextcloud 目錄，或是取消停用 OPcache API 限制的這個設定，以避免在 Nextcloud 核心或應用程式升級期間發生錯誤。",
     "The shared memory based OPcache is disabled. For better performance, it is recommended to apply <code>opcache.file_cache_only=0</code> to your PHP configuration and use the file cache as second level cache only." : "以共享記憶體為基礎的 OPcache 已停用。如果要有更好的效能，建議套用 <code>opcache.file_cache_only=0</code> 到您的 PHP 組態設定中，並僅將檔案快取作為第二級快取。",
     "The maximum number of OPcache keys is nearly exceeded. To assure that all scripts can be kept in the cache, it is recommended to apply <code>opcache.max_accelerated_files</code> to your PHP configuration with a value higher than <code>%s</code>." : "幾乎超過了 OPcache 鍵的最大數量。為確保幾乎所有命令稿都可以保留在快取中，建議在您 PHP 組態設定中的 <code>opcache.max_accelerated_files</code> 套用高於 <code>%s</code> 的值。",
-    "The OPcache buffer is nearly full. To assure that all scripts can be hold in cache, it is recommended to apply <code>opcache.memory_consumption</code> to your PHP configuration with a value higher than <code>%s</code>." : "OPcache 緩衝區幾乎快滿了。為確保所有命令稿都可以保留在快取中，建議在您 PHP 組態設定中的 <code>opcache.memory_consumption</code> 套用高於 <code>%s</code> 的值。",
+    "The OPcache buffer is nearly full. To assure that all scripts can be hold in cache, it is recommended to apply <code>opcache.memory_consumption</code> to your PHP configuration with a value higher than <code>%s</code>." : "OPcache 緩衝區幾乎快滿了。為確保所有 script 都可以保留在快取中，建議在您 PHP 組態設定中的 <code>opcache.memory_consumption</code> 套用高於 <code>%s</code> 的值。",
     "The OPcache interned strings buffer is nearly full. To assure that repeating strings can be effectively cached, it is recommended to apply <code>opcache.interned_strings_buffer</code> to your PHP configuration with a value higher than <code>%s</code>." : "OPcache 內部字串緩衝區幾乎快滿了。為確保可以有效快取重複字串，建議在您 PHP 組態設定中的 <code>opcache.interned_strings_buffer</code> 套用高於 <code>%s</code> 的值。",
     "Administrator documentation" : "管理員文件",
     "User documentation" : "使用者文件",
@@ -125,7 +125,7 @@
     "Overview" : "概覽",
     "Basic settings" : "基本設定",
     "Sharing" : "分享",
-    "Availability" : "可見時間",
+    "Availability" : "空閒時間",
     "Calendar" : "行事曆",
     "Personal info" : "個人資訊",
     "Mobile & desktop" : "行動裝置及桌面",
@@ -260,16 +260,16 @@
     "Changed disclaimer text" : "已變更免責聲明文字",
     "Deleted disclaimer text" : "已刪除免責聲明文字",
     "Could not set disclaimer text" : "無法設定免責聲明文字",
-    "Two-Factor Authentication" : "雙因素認證",
-    "Two-factor authentication can be enforced for all users and specific groups. If they do not have a two-factor provider configured, they will be unable to log into the system." : "可對所有使用者與特定群組強制啟用雙因素認證。如果他們沒有設定雙因素認證提供者，那麼他們就會無法登入系統。",
-    "Enforce two-factor authentication" : "強制雙因素認證",
+    "Two-Factor Authentication" : "雙因子認證",
+    "Two-factor authentication can be enforced for all users and specific groups. If they do not have a two-factor provider configured, they will be unable to log into the system." : "可對所有使用者與特定群組強制啟用雙因子認證。如果他們沒有設定雙因子認證提供者，那麼他們就會無法登入系統。",
+    "Enforce two-factor authentication" : "強制雙因子認證",
     "Limit to groups" : "限制給特定群組",
-    "Enforcement of two-factor authentication can be set for certain groups only." : "強制雙因素認證可僅為某些群組設定。",
-    "Two-factor authentication is enforced for all members of the following groups." : "對以下群組的所有成員強制開啟雙因素認證。",
+    "Enforcement of two-factor authentication can be set for certain groups only." : "強制雙因子認證可僅為某些群組設定。",
+    "Two-factor authentication is enforced for all members of the following groups." : "對以下群組的所有成員強制開啟雙因子認證。",
     "Enforced groups" : "強制的群組",
-    "Two-factor authentication is not enforced for members of the following groups." : "以下群組的成員不強制開啟雙因素認證。",
+    "Two-factor authentication is not enforced for members of the following groups." : "以下群組的成員不強制開啟雙因子認證。",
     "Excluded groups" : "排除的群組",
-    "When groups are selected/excluded, they use the following logic to determine if a user has 2FA enforced: If no groups are selected, 2FA is enabled for everyone except members of the excluded groups. If groups are selected, 2FA is enabled for all members of these. If a user is both in a selected and excluded group, the selected takes precedence and 2FA is enforced." : "選取/排除群組時，其使用以下邏輯來確定使用者是否強制啟用雙因素認證：如果沒有選取群組，雙因素認證對所有除了排除群組以外的成員啟用。若選取了群組，則雙因素認證會對所有該群組的成員啟用。如果某個使用者同時位在選取與排除的群組，則被選取的群組優先程度較高，因此會強制啟用雙因素認證。",
+    "When groups are selected/excluded, they use the following logic to determine if a user has 2FA enforced: If no groups are selected, 2FA is enabled for everyone except members of the excluded groups. If groups are selected, 2FA is enabled for all members of these. If a user is both in a selected and excluded group, the selected takes precedence and 2FA is enforced." : "選取/排除群組時，其使用以下邏輯來確定使用者是否強制啟用雙因子認證：如果沒有選取群組，雙因子認證對所有除了排除群組以外的成員啟用。若選取了群組，則雙因子認證會對所有該群組的成員啟用。如果某個使用者同時位在選取與排除的群組，則被選取的群組優先程度較高，因此會強制啟用雙因子認證。",
     "Save changes" : "儲存變更",
     "All" : "所有",
     "Limit app usage to groups" : "限制特定群組使用應用程式",
@@ -637,6 +637,6 @@
     "Subscribe to our newsletter" : "訂閱我們的電子報",
     "This community release of Nextcloud is unsupported and instant notifications are unavailable." : "不支援 Nextcloud 的這個社群版本，且即時通知不可用。",
     "Use a second factor besides your password to increase security for your account." : "使用密碼以外的第二因素來提升您帳號的安全性。",
-    "If you use third party applications to connect to Nextcloud, please make sure to create and configure an app password for each before enabling second factor authentication." : "如果您使用第三方應用程式連線到 Nextcloud，請確保在啟用雙因素認證前，已為每個應用程式設定應用程式密碼。"
+    "If you use third party applications to connect to Nextcloud, please make sure to create and configure an app password for each before enabling second factor authentication." : "如果您使用第三方應用程式連線到 Nextcloud，請確保在啟用雙因子認證前，已為每個應用程式設定應用程式密碼。"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
