--- a/apps/files/l10n/zh_TW.json
+++ b/apps/files/l10n/zh_TW.json
@@ -89,10 +89,10 @@
     "File name cannot be empty." : "檔名不能為空。",
     "\"/\" is not allowed inside a file name." : "不允許檔名中出現「/」。",
     "\"{name}\" is not an allowed filetype" : "「{name}」是不允許的檔案類型",
-    "Storage of {owner} is full, files cannot be updated or synced anymore!" : "{owner} 的儲存空間已滿，沒有辦法再更新或是同步檔案！",
+    "Storage of {owner} is full, files cannot be updated or synced anymore!" : "{owner} 的儲存空間已滿，已無法再更新或是同步檔案！",
     "Group folder \"{mountPoint}\" is full, files cannot be updated or synced anymore!" : "群組資料夾「{mountPoint}」已滿，已無法再更新或同步檔案！",
     "External storage \"{mountPoint}\" is full, files cannot be updated or synced anymore!" : "外部儲存空間「{mountPoint}」已滿，已無法再更新或同步檔案！",
-    "Your storage is full, files cannot be updated or synced anymore!" : "您的儲存空間已滿，沒有辦法再更新或是同步檔案！",
+    "Your storage is full, files cannot be updated or synced anymore!" : "您的儲存空間已滿，已無法再更新或是同步檔案！",
     "Storage of {owner} is almost full ({usedSpacePercent}%)." : "{owner} 的儲存空間將近已滿 ({usedSpacePercent}%)。",
     "Group folder \"{mountPoint}\" is almost full ({usedSpacePercent}%)." : "群組資料夾「{mountPoint}」將近已滿 ({usedSpacePercent}%)。",
     "External storage \"{mountPoint}\" is almost full ({usedSpacePercent}%)." : "外部儲存空間「{mountPoint}」將近已滿 ({usedSpacePercent}%)。",
@@ -120,7 +120,7 @@
     "Favorites" : "喜愛",
     "File changes" : "檔案更動",
     "Created by {user}" : "由 {user} 建立",
-    "Changed by {user}" : "由 {user} 改動",
+    "Changed by {user}" : "由 {user} 變更",
     "Deleted by {user}" : "由 {user} 刪除",
     "Restored by {user}" : "由 {user} 還原",
     "Renamed by {user}" : "由 {user} 改名",
@@ -240,7 +240,7 @@
     "WebDAV" : "WebDAV",
     "Copy to clipboard" : "複製到剪貼簿",
     "Use this address to access your Files via WebDAV" : "使用此位置透過 WebDAV 存取您的檔案",
-    "If you have enabled 2FA, you must create and use a new app password by clicking here." : "若您啟用了雙因素認證，您必須點擊此處建立並使用新的應用程式密碼。",
+    "If you have enabled 2FA, you must create and use a new app password by clicking here." : "若您啟用了雙因子認證，您必須點擊此處建立並使用新的應用程式密碼。",
     "Clipboard is not available" : "剪貼簿無法使用",
     "WebDAV URL copied to clipboard" : "WebDAV URL 已複製到剪貼簿",
     "Unable to change the favourite state of the file" : "無法更改檔案的喜愛狀態",
@@ -271,7 +271,7 @@
     "Templates" : "範本",
     "Unable to initialize the templates directory" : "無法初始化範本目錄",
     "Created new folder \"{name}\"" : "已建立新資料夾「{name}」",
-    "One of the dropped files could not be processed" : "無法處理其中一個投放的檔案",
+    "One of the dropped files could not be processed" : "無法處理其中一個投遞的檔案",
     "Uploading \"{filename}\" failed" : "上傳「{filename}」失敗",
     "_{folderCount} folder_::_{folderCount} folders_" : ["{folderCount} 個資料夾","{folderCount} 個資料夾"],
     "_{fileCount} file_::_{fileCount} files_" : ["{fileCount} 個檔案","{fileCount} 個檔案"],
