--- a/apps/user_status/l10n/zh_TW.json
+++ b/apps/user_status/l10n/zh_TW.json
@@ -39,7 +39,7 @@
     "30 minutes" : "30 分鐘",
     "1 hour" : "1 小時",
     "4 hours" : "4 小時",
-    "Mute all notifications" : "消音所有通知",
+    "Mute all notifications" : "靜音所有通知",
     "Appear offline" : "顯示為離線"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
